opdateringer til alt

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 
 <section class="banner"> <!-- Banner med overskrift, brødtekst og CTA knap -->
     <figure class="banneroverlay">
-        <h1 class="banneroverskrift">
+        <h1 class="banneroverskrift1">
             LOPPEMARKEDERNESDAG
         </h1>
-        <h1 class="banneroverskrift">
+        <h1 class="banneroverskrift2">
             Lørdag d. 20 maj
         </h1>
         <p>kl. 9-17</p>
@@ -89,34 +89,34 @@
 <section class="erdumed">
     <figure class="erdumed1">
         <img class="ikonererdumed" src="assets/images/Ikoner/Placering.png" alt="placerings ikon">
-        <h3>FIND EN STAND NÆR DIG</h3>
-        <p>Vælg det område i Danmark,</p>
-        <p>som du ønsker at få en stand.</p>
+        <h3 class="erdumedoverskrift">FIND EN STAND NÆR DIG</h3>
+        <p class="graatekster">Vælg det område i Danmark,</p>
+        <p class="graatekster">som du ønsker at få en stand.</p>
     </figure>
     <figure class="erdumed2">
         <img class="ikonererdumed" src="assets/images/Ikoner/Lejstand.png" alt="lej stand ikon">
-        <h3>BOOK EN STAND</h3>
-        <p>Tilmeld dig for 150 kr. går til</p>
-        <p>Den Danske Naturfondt.</p>
+        <h3 class="erdumedoverskrift">BOOK EN STAND</h3>
+        <p class="graatekster">Tilmeld dig for 150 kr. går til</p>
+        <p class="graatekster">Den Danske Naturfondt.</p>
     </figure>
     <figure class="erdumed3">
         <img class="ikonererdumed" src="assets/images/Ikoner/Dinstand.png" alt="din stand ikon">
-        <h3>SÆT DIN STAND OP</h3>
-        <p>Medbring dine ejendele</p>
-            <p>og pynt din bod op.</p>
+        <h3 class="erdumedoverskrift">SÆT DIN STAND OP</h3>
+        <p class="graatekster">Medbring dine ejendele</p>
+            <p class="graatekster">og pynt din bod op.</p>
     </figure>
     <figure class="erdumed4">
         <img class="ikonererdumed" src="assets/images/Ikoner/Penge.png" alt="penge ikon">
-        <h3>TJEN PENGE</h3>
-        <p>100 % af pengene du tjener,</p>
-            <p>går til dig selv.</p>
+        <h3 class="erdumedoverskrift">TJEN PENGE</h3>
+        <p class="graatekster">100 % af pengene du tjener,</p>
+            <p class="graatekster">går til dig selv.</p>
     </figure>
     <figure class="erdumed5">
+        <h3 class="winwinoverskrift">WIN WIN!</h3>
         <img class="ikonererdumed" src="assets/images/Ikoner/Highfive.png" alt="high five ikon">
-        <h3>WIN WIN!</h3>
-        <p>Ved at deltage i Loppemarkedernes</p> 
-        <p>dag, støtter du et godt formål og</p>
-        <p>samtidigt tjener penge til dig selv.</p>
+        <p class="graatekster">Ved at deltage i Loppemarkedernes</p> 
+        <p class="graatekster">dag, støtter du et godt formål og</p>
+        <p class="graatekster">samtidigt tjener penge til dig selv.</p>
         <button class="cta-knap" data-action="OpenByModel">
             Lej Stand
         </button>
@@ -126,7 +126,7 @@
 <!-- Find en stand -->
 <section class="find-stand-sektion">
     <figure class="findstand-figure">
-        <h2>
+        <h2 id="findstand">
             Find en stand nær dig
         </h2>
         <ul id="kort">
