--- a/lokationer.html
+++ b/lokationer.html
@@ -15,10 +15,10 @@
             <a href="index.html"><img class="logoimg" src="assets/images/logo.png" alt="Logo"></a>
         </figure>
         <ul class="desktop-menu">
-                <li><a href="#">OM OS</a></li>
-                <li><a href="#">LEJ STAND</a></li>
-                <li><a href="#">LOKATIONER</a></li>
-                <li><a href="#">KONTAKT OS</a></li>
+            <li><a href="index.html#omos-scroll">OM OS</a></li>
+            <li><a href="index.html#findstand">FIND STAND</a></li>
+            <li><a href="lokationer.html">LOKATIONER</a></li>
+            <li><a href="index.html#kontakt">KONTAKT OS</a></li>
         </ul>
         <nav class="footer-menu">
             <aside class="right-menu">
@@ -47,6 +47,12 @@
             Afholdes på alle lokationer kl 9-17
             Jylland  Fyn Sjælland
         </p>
+        <figure class="lokationikoner">
+        <img class="checkboximg" src="assets/images/lokationer/jylland.PNG">
+        <img class="checkboximg" style="padding-left:5%;" src="assets/images/lokationer/fyn.PNG">
+        <img class="checkboximg" src="assets/images/lokationer/sjaelland.PNG">
+        </figure>
+
     </figure>
 </section>
 
@@ -58,7 +64,7 @@
         <img class="lokationbillede" src="assets/images/lokationer/odensehavn.jpg">
         <div class="lokation-content-left">
             <h3 class="lokationheadline" id="odensehavn">ODENSE HAVN - Edionsvej, 5000 Odense</h3>
-            <p class="lokationtekst-right">I hjertet af Odense, afholdes Loppemarkedernes dag på Odense Havns samlingspunkt.
+            <p class="lokationtekst">I hjertet af Odense, afholdes Loppemarkedernes dag på Odense Havns samlingspunkt.
                 Der er flere parkeringsmuligheder i nærheden af Odense Havn. Du kan finde mange offentlige parkeringspladser og parkeringshuse på havnen. Det er en god idé at ankomme tidligt for at sikre dig en parkeringsplads i nærheden.
                 I samarbejde med Baker Boys, vil det være muligt at købe bagværk og varme drikke på pladsen.
                 Denne indtjening vil også blive doneret til Den Danske Naturfond.</p>
@@ -70,10 +76,10 @@
 <!-- Lokation1: Image on the left, text on the right -->
 <section class="lokation">
     <figure class="lokation-figure lokation-image-right">
-        <img class="lokationbillede" src="assets/images/lokationer/odensehavn.jpg">
+        <img class="lokationbillede" src="assets/images/lokationer/kbhr.jpg">
         <div class="lokation-content-right">
             <h3 class="lokationheadline" id="kbhraadhus">KØBENHAVNS RÅDHUSPLADS 1599 KØBENHAVN V</h3>
-            <p class="lokationtekst-left">I det centrale København, afholdes Loppemarkedernes dag på Rådhuspladsen.
+            <p class="lokationtekst">I det centrale København, afholdes Loppemarkedernes dag på Rådhuspladsen.
                 Parkeringsmuligheder er begrænsede, det anbefales derfor at benytte offentlig transport, cykel eller gå.
                 På pladsen vil der være forskellige madmuligheder.
                 Denne indtjening vil også blive doneret til Den Danske naturfond.</p>
@@ -84,10 +90,10 @@
 <!-- Lokation1: Image on the left, text on the right -->
 <section class="lokation">
     <figure class="lokation-figure lokation-image-left">
-        <img class="lokationbillede" src="assets/images/lokationer/odensehavn.jpg">
+        <img class="lokationbillede" src="assets/images/lokationer/aalborghavn.jpg">
         <div class="lokation-content-left">
             <h3 class="lokationheadline" id="aalborghavn">AALBORG HAVN POUL BUÅS VEJ 34, 9000 AALBORG</h3>
-            <p class="lokationtekst-right">Loppemarkedernes dag er placeret midt på Aalborgs havnefront, lige ved siden af Jomfru Ane Parken.
+            <p class="lokationtekst">Loppemarkedernes dag er placeret midt på Aalborgs havnefront, lige ved siden af Jomfru Ane Parken.
                 Længere nede på havnen er der parkeringsmuligheder. Derudover er der også flere parkeringshuse uden for havnen. 
                 Der kan købes håndmadder, kage og saftevand lavet af lokale. Pengene doneres til Den Danske Naturfond.</p>
         </div>
@@ -97,10 +103,10 @@
 <!-- Lokation1: Image on the left, text on the right -->
 <section class="lokation">
     <figure class="lokation-figure lokation-image-right">
-        <img class="lokationbillede" src="assets/images/lokationer/odensehavn.jpg">
+        <img class="lokationbillede" src="assets/images/lokationer/ingerslevb.JPG">
         <div class="lokation-content-right">
             <h3 class="lokationheadline" id="ingerslevs">INGERSLEVS BOULEVARD, 8000 AARHUS C</h3>
-            <p class="lokationtekst-left">I det centrale Århus afholdes Loppemarkedernes dag på Domkirkepladsen. Parkering er knap, så det anbefales at tage offentlig transport, cykle eller gå. Der vil være forskellige madboder på pladsen, og indtjeningen vil blive doneret til Den Danske naturfond.</p>
+            <p class="lokationtekst">I det centrale Århus afholdes Loppemarkedernes dag på Domkirkepladsen. Parkering er knap, så det anbefales at tage offentlig transport, cykle eller gå. Der vil være forskellige madboder på pladsen, og indtjeningen vil blive doneret til Den Danske naturfond.</p>
         </div>
    </figure>
 </section>
@@ -109,10 +115,10 @@
 <!-- Lokation1: Image on the left, text on the right -->
 <section class="lokation">
     <figure class="lokation-figure lokation-image-left">
-        <img class="lokationbillede" src="assets/images/lokationer/odensehavn.jpg">
+        <img class="lokationbillede" src="assets/images/lokationer/ambolten.jpg">
         <div class="lokation-content-left">
             <h3 class="lokationheadline" id="ambolten">AMBOLTEN 1-6, 6000 KOLDING</h3>
-            <p class="lokationtekst-right">I det hjertet af Kolding, afholdes Loppemarkedernes dag på Slotssøen. Parkering er begrænset, så det anbefales at bruge offentlig transport, cykle eller gå. Der vil være forskellige madboder på pladsen, og indtjeningen vil gå til støtte for Den Danske naturfond.</p>
+            <p class="lokationtekst">I det hjertet af Kolding, afholdes Loppemarkedernes dag på Slotssøen. Parkering er begrænset, så det anbefales at bruge offentlig transport, cykle eller gå. Der vil være forskellige madboder på pladsen, og indtjeningen vil gå til støtte for Den Danske naturfond.</p>
         </div>
    </figure>
 </section>
@@ -120,10 +126,10 @@
 <!-- Lokation1: Image on the left, text on the right -->
 <section class="lokation">
     <figure class="lokation-figure lokation-image-right">
-        <img class="lokationbillede" src="assets/images/lokationer/odensehavn.jpg">
+        <img class="lokationbillede" src="assets/images/lokationer/kbhr.jpg">
         <div class="lokation-content-right">
             <h3 class="lokationheadline" id="underbroen">UNDER BROEN GL. STRANDVEJ, 5500 MIDDELFART </h3>
-            <p class="lokationtekst-left">I Middelfart afholdes Loppemarkedernes dag ved Marinaen. Parkering er knap, så det anbefales at benytte offentlig transport, cykel eller gå. Du kan nyde forskellige madmuligheder på pladsen, og indtægterne vil blive doneret til Den Danske naturfond.</p>
+            <p class="lokationtekst">I Middelfart afholdes Loppemarkedernes dag ved Marinaen. Parkering er knap, så det anbefales at benytte offentlig transport, cykel eller gå. Du kan nyde forskellige madmuligheder på pladsen, og indtægterne vil blive doneret til Den Danske naturfond.</p>
         </div>
    </figure>
 </section>
@@ -131,10 +137,10 @@
 <!-- Lokation1: Image on the left, text on the right -->
 <section class="lokation">
     <figure class="lokation-figure lokation-image-left">
-        <img class="lokationbillede" src="assets/images/lokationer/odensehavn.jpg">
+        <img class="lokationbillede" src="assets/images/lokationer/moellehusvej.jpg">
         <div class="lokation-content-left">
             <h3 class="lokationheadline" id="moellehusvej">MØLLEHUSVEJ 15, 4000 ROSKILDE</h3>
-            <p class="lokationtekst-right">I Roskilde afholdes Loppemarkedernes dag på Stændertorvet. Parkering er begrænset, så det anbefales at bruge offentlig transport, cykle eller gå. Der vil være forskellige madboder på pladsen, og indtjeningen vil gå til støtte for Den Danske naturfond.</p>
+            <p class="lokationtekst">I Roskilde afholdes Loppemarkedernes dag på Stændertorvet. Parkering er begrænset, så det anbefales at bruge offentlig transport, cykle eller gå. Der vil være forskellige madboder på pladsen, og indtjeningen vil gå til støtte for Den Danske naturfond.</p>
         </div>
    </figure>
 </section>
@@ -142,10 +148,10 @@
 <!-- Lokation1: Image on the left, text on the right -->
 <section class="lokation">
     <figure class="lokation-figure lokation-image-right">
-        <img class="lokationbillede" src="assets/images/lokationer/odensehavn.jpg">
+        <img class="lokationbillede" src="assets/images/lokationer/nyborg.jpeg">
         <div class="lokation-content-right">
             <h3 class="lokationheadline" id="raadhusnyborg">RÅDHUSET - TORVET 1, 5800 NYBORG</h3>
-            <p class="lokationtekst-left">I Nyborg afholdes Loppemarkedernes dag på Torvet. Parkering er begrænset, så det anbefales at benytte offentlig transport, cykel eller gå. På pladsen vil der være forskellige madmuligheder, og indtjeningen vil blive doneret til Den Danske naturfond.</p>
+            <p class="lokationtekst">I Nyborg afholdes Loppemarkedernes dag på Torvet. Parkering er begrænset, så det anbefales at benytte offentlig transport, cykel eller gå. På pladsen vil der være forskellige madmuligheder, og indtjeningen vil blive doneret til Den Danske naturfond.</p>
         </div>
    </figure>
 </section>
@@ -153,10 +159,10 @@
 <!-- Lokation1: Image on the left, text on the right -->
 <section class="lokation">
     <figure class="lokation-figure lokation-image-left">
-        <img class="lokationbillede" src="assets/images/lokationer/odensehavn.jpg">
+        <img class="lokationbillede" src="assets/images/lokationer/ambolten.jpg">
         <div class="lokation-content-left">
             <h3 class="lokationheadline" id="vejleraadhus">RÅDHUSET RÅDHUSTORVET 1, 7100 VEJLE </h3>
-            <p class="lokationtekst-right">I Vejle afholdes Loppemarkedernes dag på Torvet. Parkering er begrænset, så det anbefales at bruge offentlig transport, cykle eller gå. Der vil være forskellige madboder på pladsen, og indtjeningen vil blive doneret til Den Danske naturfond.</p>
+            <p class="lokationtekst">I Vejle afholdes Loppemarkedernes dag på Torvet. Parkering er begrænset, så det anbefales at bruge offentlig transport, cykle eller gå. Der vil være forskellige madboder på pladsen, og indtjeningen vil blive doneret til Den Danske naturfond.</p>
         </div>
    </figure>
 </section>
@@ -166,7 +172,7 @@
     <p><a class="politikker" href="#">Privatlivspolitik</a> // <a class="politikker" href="#">Cookiepolitik</a></p>
 </footer>
 <script src="assets/js/scrolltop.js"></script>
-
+<script src="assets/js/freya.js"></script>
 <button id="scrollTopBtn" onclick="scrollToTop()">↑</button>
 </body>
 </html>
