--- a/lokationer.html
+++ b/lokationer.html
@@ -8,6 +8,8 @@
    Loppemarkedernes Dag
   </title>
 <link href="styles.css" rel="stylesheet"/>
+<link rel="icon" type="image/x-icon" href="assets/images/logo.png">
+
 </head>
 <body>
     <header>
