--- a/lokationer.html
+++ b/lokationer.html
@@ -168,6 +168,8 @@
         </div>
    </figure>
 </section>
+
+</main>
 <!-- Footer -->
 <footer>
     Den Danske Naturfond - Vodroffsvej 59, 1900 Frederiksberg, email:kontakt@naturfonden.dk, Tlf:71 99 72 01, CVR-nr. 36 50 29 91
